<?xml version="1.0"?>
<package>
  <name>heron_common</name>
  <version>0.0.0</version>
  <description>The heron_common package</description>

  <author email="rjulia@robotnik.es">Raquel Julia</author>
  <maintainer email="rjulia@robotnik.es">Raquel Julia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

    <metapackage/>

  </export>

</package>
