<?xml version="1.0"?>
<package>
  <name>heron_control</name>
  <version>0.0.0</version>
  <description>The heron_control package</description>

  <author email="rjulia@robotnik.es">Raquel Julia</author>
  <maintainer email="rjulia@robotnik.es">Raquel Julia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>ackermann_msgs</buildtool_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rbvogui_pad</run_depend>

</package>
