<?xml version="1.0"?>
<package>
  <name>heron_localization</name>
  <version>0.0.0</version>
  <description>The heron_localization package</description>

  <author email="rjulia@robotnik.es">Raquel Julia</author>
  <maintainer email="rjulia@robotnik.es">Raquel Julia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>

  <export>

  </export>
</package>